Add Database context

--- a/GenX.Server/appsettings.json
+++ b/GenX.Server/appsettings.json
@@ -1,3 +1,6 @@
 {
-
+  "ConnectionStrings": {
+    "db_core": "server=host;port=port;database=db;uid=user;password=pass",
+    "db_core_local": "server=host;port=port;database=db;uid=user;password=pass"
+  }
 }
