--- a/GenX.Server/appsettings.json
+++ b/GenX.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db_core": "server=host;port=port;database=db;uid=user;password=pass",
-    "db_core_local": "server=host;port=port;database=db;uid=user;password=pass"
+    "db_core": "server=145.239.206.41;port=3306;database=genproject;uid=genproject;password=H!l6*/hfSQs8)N*k",
+    "db_core_local": "server=127.0.0.1;port=3307;database=genproject;uid=genproject;password=67LJG0P[hA.s693N"
   }
 }
