--- a/GenX.Server/GenX.Server.csproj
+++ b/GenX.Server/GenX.Server.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="SeriLogThemesLibrary" Version="1.0.0.1" />
+    <PackageReference Include="Sylver.HandlerInvoker" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
