--- a/GenX.Client/GenX.Client.csproj
+++ b/GenX.Client/GenX.Client.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="Sylver.HandlerInvoker" Version="1.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
