Network project fix commit

--- a/GenX.Server/appsettings.json
+++ b/GenX.Server/appsettings.json
@@ -2,5 +2,8 @@
   "ConnectionStrings": {
     "db_core": "server=145.239.206.41;port=3306;database=genproject;uid=genproject;password=H!l6*/hfSQs8)N*k",
     "db_core_local": "server=127.0.0.1;port=3307;database=genproject;uid=genproject;password=67LJG0P[hA.s693N"
+  },
+  "ServerInfos": {
+    "Port": 5555
   }
 }
