--- a/GenX.Network/GenX.Network.csproj
+++ b/GenX.Network/GenX.Network.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Network" Version="6.2.5.23" />
     <PackageReference Include="Serilog" Version="4.0.1" />
