Fix previous commit where user was always null

--- a/GenX.Server/GenX.Server.csproj
+++ b/GenX.Server/GenX.Server.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GenX.Common\GenX.Common.csproj" />
     <ProjectReference Include="..\GenX.Network\GenX.Network.csproj" />
   </ItemGroup>
 
