--- a/GenX.Common/GenX.Common.csproj
+++ b/GenX.Common/GenX.Common.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Collections\" />
+    <ProjectReference Include="..\GenX.Network\GenX.Network.csproj" />
   </ItemGroup>
 
 </Project>
