--- a/GenX.Client/GenX.Client.csproj
+++ b/GenX.Client/GenX.Client.csproj
@@ -1,83 +1,79 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>WinExe</OutputType>
-		<TargetFramework>net9.0-windows10.0.18362.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<UseWPF>true</UseWPF>
-		<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>net9.0-windows10.0.18362.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <UseWPF>true</UseWPF>
+        <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+	    <EnableSourceControlManagerQueries>false</EnableSourceControlManagerQueries>
+	    <EnableSourceLink>false</EnableSourceLink>
 	</PropertyGroup>
+    <ItemGroup>
+        <None Remove="Assets\bg.jpg" />
+        <None Remove="Assets\default_avatar.png" />
+        <None Remove="Assets\logo.ico" />
+        <None Remove="Assets\logo.png" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<None Remove="Assets\bg.jpg" />
-		<None Remove="Assets\default_avatar.png" />
-		<None Remove="Assets\logo.ico" />
-		<None Remove="Assets\logo.png" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="CodingSeb.Localization" Version="1.4.0" />
+        <PackageReference Include="CodingSeb.Localization.JsonFileLoader" Version="1.4.0" />
+        <PackageReference Include="CodingSeb.Localization.WPF" Version="1.4.1" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="H.NotifyIcon.Wpf" Version="2.3.0" />
+        <PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.10.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.8" />
+        <PackageReference Include="Network" Version="6.2.5.23" />
+        <PackageReference Include="Serilog" Version="4.3.0" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
+        <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+        <PackageReference Include="Sylver.HandlerInvoker" Version="1.1.2" />
+        <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+        <PackageReference Include="XamlFlair.WPF" Version="1.2.13" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="CodingSeb.Localization" Version="1.4.0" />
-		<PackageReference Include="CodingSeb.Localization.JsonFileLoader" Version="1.4.0" />
-		<PackageReference Include="CodingSeb.Localization.WPF" Version="1.4.1" />
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Include="H.NotifyIcon.Wpf" Version="2.3.0" />
-		<PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.10.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.6" />
-		<PackageReference Include="Network" Version="6.2.5.23" />
-		<PackageReference Include="Serilog" Version="4.3.0" />
-		<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
-		<PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
-		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-		<PackageReference Include="Sylver.HandlerInvoker" Version="1.1.2" />
-		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
-	</ItemGroup>
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Properties\Settings.settings">
+            <Generator>SettingsSingleFileGenerator</Generator>
+            <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+        </None>
+        <None Update="Resources\Localization.loc.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
-	<ItemGroup>
-		<None Update="appsettings.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Properties\Settings.settings">
-			<Generator>SettingsSingleFileGenerator</Generator>
-			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
-		</None>
-		<None Update="Resources\Localization.loc.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\GenX.Common\GenX.Common.csproj" />
+        <ProjectReference Include="..\GenX.Network\GenX.Network.csproj" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\GenX.Common\GenX.Common.csproj" />
-		<ProjectReference Include="..\GenX.Network\GenX.Network.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <Resource Include="Assets\bg.jpg" />
+        <Resource Include="Assets\default_avatar.png" />
+        <Resource Include="Assets\logo.ico" />
+        <Resource Include="Assets\logo.png" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<Reference Include="XamlFlair.WPF">
-			<HintPath>..\Libraries\XamlFlair.WPF\XamlFlair.WPF.dll</HintPath>
-		</Reference>
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Update="Properties\Settings.Designer.cs">
+            <DesignTimeSharedInput>True</DesignTimeSharedInput>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Settings.settings</DependentUpon>
+        </Compile>
+    </ItemGroup>
 
-	<ItemGroup>
-		<Resource Include="Assets\bg.jpg" />
-		<Resource Include="Assets\default_avatar.png" />
-		<Resource Include="Assets\logo.ico" />
-		<Resource Include="Assets\logo.png" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Compile Update="Properties\Settings.Designer.cs">
-			<DesignTimeSharedInput>True</DesignTimeSharedInput>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>Settings.settings</DependentUpon>
-		</Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Network\Handlers\" />
-	  <Folder Include="ViewModels\Pages\" />
-	</ItemGroup>
+    <ItemGroup>
+        <Folder Include="Services\" />
+        <Folder Include="ViewModels\Pages\" />
+    </ItemGroup>
 
 </Project>
